--- a/src/boilerplate.css
+++ b/src/boilerplate.css
@@ -53,6 +53,7 @@ html {
   article p {
     text-align: justify;
     margin-bottom: 25px;
+    line-height: 1.6;
   }
 
   article h1, h2, h3, h4, h5, h6 {
